icp-backend/celery/service-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: celerysvc 
spec:
 replicas: 3
 template:
   metadata:
     name: celerysvc
     labels:
       app: celerysvc
   spec:
     containers:
       - name: celerysvc
         image: "mycluster.icp:8500/default/celery:latest" 
         imagePullPolicy: Always
         ports:
         - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
 name: celerysvc
 labels:
   app: celerysvc
spec:
 type: NodePort
 selector:
   app: celerysvc
 ports:
  - protocol: TCP
    name: celerysvc
    port: 4000
    targetPort: 4000
    nodePort: 30989
